# sec-edgar-agentkit

./: .eslintrc.js  .gitignore  CITATION.cff  LICENSE  README.md  jest.preset.cjs  nx.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  publish-langchain.yml  publish-langgraph.yml  publish-smolagents.yml  release.yml  test-langchain.yml  test-langgraph.yml  test-mcp-use.yml  test-smolagents.yml
examples/: README.md
examples/huggingface-gradio/: app.py  requirements.txt
examples/langchain/: basic-usage.ts  financial-analysis.ts
examples/mcp-use/: simple-queries.js
integrations/: README.md
integrations/dify/: CITATION.cff  main.py  manifest.yaml  package.json  project.json
integrations/dify/tools/: analyze_8k.yaml  analyze_financials.yaml  analyze_insider_trading.yaml  get_company_facts.yaml  get_company_info.yaml  get_filing_content.yaml  get_recent_filings.yaml  lookup_cik.yaml  parse_xbrl.yaml
integrations/gradio/: CITATION.cff  LICENSE  app.py  package.json  project.json  requirements.txt  run.sh
integrations/gradio/__tests__/: gradio.test.py
integrations/langchain/: CITATION.cff  PUBLISHING.md  README.md  index.ts  jest.config.cjs  package.json  project.json  toolkit.ts  tsconfig.json
integrations/langchain/__tests__/: integration.test.ts  toolkit.test.ts
integrations/langchain/python/: README.md  pyproject.toml  setup.py
integrations/langchain/python/notebooks/: README.md  quickstart-earnings-analysis.ipynb  sec-edgar-financial-analysis.ipynb
integrations/langchain/python/src/sec_edgar_langchain/: __init__.py  toolkit.py
integrations/langchain/typescript/: README.md  jest.config.js  package.json  project.json  toolkit.ts  tsconfig.json  tsconfig.test.json
integrations/langgraph/: CITATION.cff  LICENSE  README.md  jest.config.cjs  package.json  project.json  tsconfig.json
integrations/langgraph/__tests__/: workflows.test.ts
integrations/langgraph/examples/: event-monitoring.ts  (+3 more)
integrations/mcp-use/: CITATION.cff  README.md  index.js  jest.config.cjs  package.json  project.json
integrations/smolagents/: CITATION.cff  package.json  project.json  requirements.txt
(+13 files in other folders)
