[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-edgar-langchain"
version = "0.1.0"
description = "LangChain toolkit for SEC EDGAR data analysis"
authors = [
    {name = "Stefano Amorelli", email = "stefano@amorelli.tech"},
]
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.8"
keywords = ["sec", "edgar", "langchain", "agent", "financial", "analysis", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/stefanoamorelli/sec-edgar-agentkit"
Repository = "https://github.com/stefanoamorelli/sec-edgar-agentkit.git"
Issues = "https://github.com/stefanoamorelli/sec-edgar-agentkit/issues"

[tool.setuptools]
packages = ["sec_edgar_langchain"]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true